2003-01-23  D. Richard Hipp  <drh@hwaci.com>

	* library/entry.tcl: Fix the KeyPress binding on the entry widget
	so that it enters text from left to right (not right to left) even
	if the mouse button is being held down.  [Bug #673687]

2003-01-22  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkFrame.c (TkToplevelWindowForCommand): Added way of
	mapping from command names to tkwins-for-toplevels.
	* generic/tkImage.c (Tk_ImageObjCmd): Added check to make sure
	that you're not creating an image named the same as .'s command,
	which refixes 220891, even when the name of the command has been
	changed with 'rename'.  The error message is better too.
	* tests/image.test (image-1.10,image-1.11): Updated to match new
	error message and added test for the rename case.

2003-01-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkImage.c (DeleteImage): delete the image's entry in the
	image table correctly when there are no more instances.  This
	reopens bug 220891. [Bug #669759]

2003-01-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* doc/loadTk.n: note that ::safe::loadTk has a prereq on
	::safe::interpCreate or ::safe::interpInit. [Bug #669159]

	* doc/photo.n: $image put only accepts -format and -to, and note
	extended use of -to.

2003-01-17  D. Richard Hipp <drh@hwaci.com>
	* generic/tkCanvUtil.c: The clipping algorithm introduced on 2003-01-08
	was unnecessarily aggressive in reducing the size of the clipping box.
	This did not cause a problem for normal display, but did create
	trouble for some extensions that attempt to render a canvas on a
	GDI printer under Windows.  The patch here relaxes the constraints on
	the clipping box somewhat.  [Bug #663981]

2003-01-14  Joe English  <jenglish@users.sourceforge.net>
	* generic/tkSelect.c (Tk_CreateSelHandler):
	Fix for #666346 "Selection handling crashes under KDE 3.0"
	* tests/unixSelect.test (unixSelect-1.20): Added test case.

2003-01-13  Mo DeJong  <mdejong@users.sourceforge.net>
